"all changes"# Please enter the commit message for your changes. Lines starting

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,79 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>EcoSphere News</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Vithkuqi:wght@400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
-
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="header">
+      <nav>
+           <a href="index.html"><img src="./images/logo news site.PNG"></a>
+           <div class="nav-links">
+              <ul>
+                <li><a href=" ">HOME</a></li>
+                <li><a href=" ">ABOUT</a></li>
+                <li><a href=" ">ARTICLES</a></li>
+                <li><a href=" ">CONTACT US</a></li>
+              </ul>
+           </div>
+      </nav>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+<!-------main theme------->
+<section class="flex-parent-box1">
+  <div class="flex-box1-child1">
+    <img src="./images/mainpicture1.png" width="500px" height="400px" />
+  </div>
+  <div class="flex-box1-child2">
+    <h1>Latest sustainable news!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <button>READ MORE</button>
+  </div>
+</section>
+
+<!--------8 squares------>
+<section class="flex-box1-parent2">
+  
+  <div class="flex-child sqaure1">
+    <img src="./images/lifeonland.PNG" width="100px" height="100px"/>
+    <span class="caption1">Life on land</span>
+  </div>
+  <div class="flex-child square2">
+    <img src="./images/climateaction.gif" width="100px" height="100px"/>
+    <span class="caption2">Climate action</span>
+  </div>
+  <div class="flex-child square3">
+    <img src="./images/cleanenergy.PNG" width="100px" height="100px"/>
+    <span class="caption3">Clean energy</span>
+  </div>
+  <div class="flex-child square4">
+    <img src="./images/cleanwater.PNG" width="100px" height="100px"/>
+    <span class="caption4">Clean water</span>
+  </div>
+  <div class="flex-child square5">
+    <img src="./images/sustaniblecitiesandcomm.PNG" width="100px" height="100px"/>
+    <span class="caption5">Sustainable cities</span>
+  </div>
+  <div class="flex-child square6">
+    <img src="./images/responsibleconsumption.PNG" width="100px" height="100px"/>
+    <span class="caption6">Responsible consumption</span>
+  </div>
+  <div class="flex-child square7">
+    <img 
+    src="./images/goodhealthwellbeing.PNG" width="100px" height="100px"/>
+    <span class="caption7">Good health</span>
+  </div>
+  <div class="flex-child square8">
+    <img src="./images/lifebelowwater.PNG"width="100px" height="100px"/>
+    <span class="caption8">Life below water</span>
+  </div> 
+</section>
+
   </body>
 </html>
