--- a/code/index.html
+++ b/code/index.html
@@ -30,57 +30,55 @@
           <li><a href="/"> Newsletter </a></li>
         </div>
       </ul>
+    </nav>
   </div>
-  </ul>
-  </nav>
+
 
   <!--fjernet over-->
-  <ul>
-    <div class="grid-parent">
+  <div class="grid-parent">
 
-      <div class="grid-item grid-one">
-        <h1>HEADER TEST OG BILDE</h1>
-      </div>
-
-      <div class="grid-item sidebar">test</div>
-
-      <div class="grid-item grid-two">
-        <p>big news
-          hmm</p>
-      </div>
-
-      <div class="grid-item grid-three">
-        <p>daly news
-          testing
-        </p>
-      </div>
-
-      <div class="grid-item grid-four">4
-        <p1>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
-          <p2>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO </p>
-      </div>
-      <div class="grid-item grid-five">5</div>
-      <div class="grid-item grid-six">6</div>
-      <div class="grid-item grid-seven">7</div>
-      <div class="grid-item grid-eight">8</div>
-      <!--begynne med str før jeg legger mye inn-->
-    </div>
-  </ul>
-
-  <section class="flex-parent">
-    <div class="flex-child red">
-      <img src="./blomst.png" alt="">
-      <button>Click here</button>
+    <div class="grid-item grid-one">
+      <h1>HEADER TEST OG BILDE</h1>
     </div>
 
-    <div class="flex-child blue">
-      <img src="./blomst2.png" alt="">
-      <button>Click here</button>
+    <div class="grid-item sidebar">
+      <div class="sidebar-image">
+        <img src="./blomst.png" alt="grid flow test">
+      </div>
+      <div class="sidebar-text">
+        <p>MYE TEKST HER KKKKKKKKKKKKKKKKKKKKKKKKK OOOOOOOOOOOOOOOOOOO</p>
+      </div>
     </div>
-  </section>
 
+    <div class="grid-item grid-two">
+
+      <section class="flex-parent">
+        <div class="flex-child red">
+          <img src="./blomst.png" alt="">
+          <button>Click here</button>
+        </div>
+      </section>
+      <p>big news
+        hmm</p>
+    </div>
+
+    <div class="grid-item grid-three">
+      <p>daly news
+        testing
+      </p>
+    </div>
+
+    <div class="grid-item grid-four">4</div>
+    <div class="grid-item grid-five">5</div>
+    <div class="grid-item grid-six">6</div>
+    <div class="grid-item grid-seven">7</div>
+    <div class="grid-item grid-eight">8</div>
+    <!--begynne med str før jeg legger mye inn-->
 
   </div>
+
+
+
   <footer>
     <!--How to differentiate between navbar and footer? I want to center the footer, dont forget to add css for the footer after-->
     <ul>
@@ -91,9 +89,7 @@
     </ul>
   </footer>
 
-  </div>
 </body>
-</div>
 
 
 
