--- a/code/index.html
+++ b/code/index.html
@@ -2,22 +2,41 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Change the title below -->
-    <title>News Site</title>
+    <title>News site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <h1 class="top-heading"> 🦙 Lama News</h1>
+            
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+    <section class="big-news">      
+      <h2> Big news! Puppies for everyone!</h2>       
+      <p><a href="https://www.google.com/">Recent studies shows that puppies make everyone happy</a></p> 
+      <img src="./images/pexels-ilargian-faus-1629781.jpg">               
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <section class="flex-parent">
+      <div class="flex-child red">        
+        <h3><a href="https://www.google.com/">How will AI change the future</a></h3>         
+        <img src="./images/pexels-cottonbro-studio-6153354.jpg">        
+    </div>    
+    <div class="flex-child pink">        
+        <h3><a href="https://www.google.com/">Lost sheep found after years in the wild</a></h3>       
+        <img src="./images/pexels-leon-woods-599040.jpg">        
+    </div> 
+    <div class="flex-child green">          
+        <h3><a href="https://www.google.com/">How to prepare your garden for next season</a></h3>        
+        <img src="./images/pexels-mateusz-dach-409162.jpg">       
+    </div>
+    <div class="flex-child purple">
+        <h3><a href="https://www.google.com/">Aurora Season is underway</a></h3>        
+        <img src="./images/pexels-stein-egil-liland-3408744.jpg">      
+    </div>     
     </section>
   </body>
 </html>
