added some content and tried to fix the form

--- a/code/about.html
+++ b/code/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Terrier Times</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -47,29 +47,28 @@
 
     <section class="news-grid">
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <h3>DOG TREAT REVIEW: DENTASTIX</h3>
+        <p><img src="dentastix.jpg" alt="Dentastix"/>Find out what the terriers think about this classic.
         </p>
+        <a href="#dentastix" class="read-more-button">READ MORE</a>
       </article>
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3>DOG PARK: PAWS UP OR DOWN?</h3>
+        <p>Dog parks can be a great opportunity for dogs to run around and meet other dogs. What do Odette and Tuutikki think?
+        </p>
+        <a href="#dogpark" class="read-more-button">READ MORE</a>
       </article>
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3>ARMI: THE CAT BEHIND THE DOGS</h3>
+        <p><img src="armi.jpg" alt="Armi"/>There are two dogs, but first, there was a cat. Who is the mysterious Armi?
+        </p>
+        <a href="#armi" class="read-more-button">READ MORE</a>
       </article>
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3>COOL FOR THE SUMMER</h3>
+        <p>The 11-year-old Jack-Cairn terrier Odette has quite a thick fur that can be a nuisance during the hot summer months. Join us for a trip to the trimmer!
+        </p>
+        <a href="#coolforthesummer" class="read-more-button">READ MORE</a>
       </article>
     </section>
   </body>
