--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Terrier Times</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -24,39 +24,38 @@
       <h2 class="section-title">BREAKING: A WILD CHASE IN THE HEAT!</h2>
       <h4>Published 31/7/2023 16:44</h4>
       <p class="main-news"><img src="odettechase.jpg" alt="Odette after the chase." width="200px">
-      She has done it again, folks. Looking at 11-year-old Odette and her daily antics, you would not guess how fast this Jack-Cairn lady can run when given the chance.<br/><br/>
+        She has done it again, folks. Looking at 11-year-old Odette and her daily antics, you would not guess how fast this Jack-Cairn lady can run when given the chance.<br/><br/>
         This dog doesn't particularly enjoy excercise - except when there's an element of chase tied to it", a source tells Terrier Times. On Monday the 31st of July, Odette managed to wiggle herself out of her harness during her afternoon walk.<br/><br/>
         She was chased around the neighbourhood for almost two hours before getting caught.
         The day was quite hot, and as Odette has quite a thick fur, she tired herself out eventually and gave the worried search party a chance to get her to safety. An adventure like this could be quite dangerous for and old dog with a thick fur.
-          "Her heart was beating quite fast for a while there, but luckily it calmed down after a while", the owner says wth relief.
+        "Her heart was beating quite fast for a while there, but luckily it calmed down after a while", the owner says wth relief.<br/><br/>
       </p>
     </section>
 
     <section class="news-grid">
       <article class="grid-cell">
         <h3>DOG TREAT REVIEW: DENTASTIX</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        <p><img src="dentastix.jpg" alt="Dentastix"/>Find out what the terriers think about this classic.
         </p>
-      </article>
-      <article class="grid-cell">
-        <h3>ARMI: THE CAT BEHIND THE DOGS</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <a href="#dentastix" class="read-more-button">READ MORE</a>
       </article>
       <article class="grid-cell">
         <h3>DOG PARK: PAWS UP OR DOWN?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>Dog parks can be a great opportunity for dogs to run around and meet other dogs. What do Odette and Tuutikki think?
+        </p>
+        <a href="#dogpark" class="read-more-button">READ MORE</a>
       </article>
       <article class="grid-cell">
-        <h3>TITLE OF GRID ARTICLE</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h3>ARMI: THE CAT BEHIND THE DOGS</h3>
+        <p><img src="armi.jpg" alt="Armi"/>There are two dogs, but first, there was a cat. Who is the mysterious Armi?
+        </p>
+        <a href="#armi" class="read-more-button">READ MORE</a>
+      </article>
+      <article class="grid-cell">
+        <h3>COOL FOR THE SUMMER</h3>
+        <p>The 11-year-old Jack-Cairn terrier Odette has quite a thick fur that can be a nuisance during the hot summer months. Join us for a trip to the trimmer!
+        </p>
+        <a href="#coolforthesummer" class="read-more-button">READ MORE</a>
       </article>
     </section>
   </body>
