--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,83 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<head>
+  <meta charset="utf-8" />
+  <!-- Change the title below -->
+  <title>Toddler's world</title>
+  <link rel="stylesheet" href="./style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- dont forget the meta tag for responsiveness -->
+</head>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<body>
+  <div class="navbar">
+    <div class="container flex">
+      <img src="logo.png" alt="Logo" class="logo">
+      <h1 class="logo">Toddler's WORLD</h1>
+      <nav>
+        <ul>
+          <li class="nav"><a class="outline" href="">Home</a></li>
+          <li class="nav"><a href="" class="outline">News</a></li>
+          <li class="nav"><a class="outline" href="">Contact</a></li>
+          <li class="nav"><a class="outline" href="">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </div>
+
+  <div class="support-grid"></div>
+
+  <div class="band">
+    <div class="item-1">
+      <a href="https://google.com" class="card">
+        <div class="thumb" style="background-image: url(preschool.jpg);"></div>
+        <article>
+          <h1>Preschool start - all you need to know</h1>
+        </article>
+      </a>
+    </div>
+    <div class="item-2">
+      <a href="https://google.com" class="card">
+        <div class="thumb" style="background-image: url(stroller.jpg);"></div>
+        <article>
+          <h1>The 10 best travel strollers</h1>
+          <p>We have tried them all! From budget to premium.
+          </p>
+        </article>
+      </a>
+    </div>
+    <div class="item-3">
+      <a href="https://google.com" class="card">
+        <div class="thumb" style="background-image: url(home-birth.jpg);"></div>
+        <article>
+          <h1>Home births</h1>
+          <p>We talk to five women about their experience of giving birth at home.
+          </p>
+        </article>
+      </a>
+    </div>
+    <div class="item-4">
+      <a href="https://google.com" class="card">
+        <div class="thumb" style="background-image: url(reading.jpg);"></div>
+        <article>
+          <h1>Toddler's favourite books</h1>
+          <p>Develop your child's love for reading.
+          </p>
+        </article>
+      </a>
+    </div>
+    <div class="item-5">
+      <a href="https://google.com" class="card">
+        <div class="thumb" style="background-image: url(blw.jpg);"></div>
+        <article>
+          <h1>What is baby-led weaning?</h1>
+          <p>Introduce your baby to solids with this method.
+          </p>
+        </article>
+      </a>
+    </div>
+  </div>
+</body>
+
 </html>
