Implemented travel site

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,145 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:ital,wght@0,300;0,400;0,500;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Borel&family=Montserrat&family=Roboto:ital,wght@0,300;0,400;0,500;1,400&display=swap"
+        rel="stylesheet">
+    <title>Top 8 Attrations in Stockholm</title>
+    <link rel="stylesheet" href="style.css" />
+
+</head>
+
+<body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <div class="logo">
+            <img src="./img/travel compass_nobg.png" alt="Travel compass" width="300px">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#" class="active" href="Home">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="sub-btn">Subscribe</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <main>
+        <div class="content-left">
+            <h1>Top 8 Attrations to Visit in Stockholm</h1>
+            <button class="cta">Read More</button>
 
-    <section class="">
-      <!-- The other news  -->
+        </div>
+        <div class="content-right"></div>
+    </main>
+
+    <section class="locations">
+        <div class="card-container">
+            <img src="./img/locations/djurgarden.jpg" class="card-img" alt="Djurgården">
+            <div class="card-body">
+                <h1 class="card-title">Djurgården </h1>
+                <p class="card-sub-title">The best park you can't miss in Stockholm</p>
+                <p class="card-content">Djurgården is a beautiful island in the heart of Stockholm and a popular
+                    destination for both locals and tourists. It's famous for its greenery, museums, and amusement park,
+                    which make it a great spot for families and nature lovers. isitors can take a stroll along the
+                    waterfront, rent a bike or boat, or simply relax and enjoy the stunning surroundings.</p>
+            </div>
+        </div>
+        <div class="card-container">
+            <img src="./img/locations/Drottningholm.jpg" class="card-img" alt="Drottningholm Palace">
+            <div class="card-body">
+                <h1 class="card-title">Drottningholm </h1>
+                <p class="card-sub-title">UNESCO World Heritage Site</p>
+                <p class="card-content"> Drottningholm Palace is a beautiful 17th-century palace located on the island
+                    of Lovön in Stockholm, Sweden. It is the private residence of the Swedish royal family and has been
+                    designated a UNESCO World Heritage Site. Visitors can explore the palace's stunning Baroque
+                    architecture, opulent decor, and extensive gardens, including the French and English gardens and an
+                    orangery.</p>
+            </div>
+        </div>
+        <div class="card-container">
+            <img src="./img/locations/Freyja_day.JPG" class="card-img" alt="Freyja">
+            <div class="card-body">
+                <h1 class="card-title">Freyja </h1>
+                <p class="card-sub-title">The most stunning view over Stockholm</p>
+                <p class="card-content">Freyja is a bar located in the heart of Stockholm, Sweden. With its cozy
+                    ambiance, stylish decor and wide selection of drinks, it is a popular hangout spot for locals and
+                    tourists alike. The bar is named after the Norse goddess Freyja, who symbolizes love, beauty, and
+                    fertility.</p>
+            </div>
+        </div>
+        <div class="card-container">
+            <img src="./img/locations/hallOfFame.JPG" class="card-img" alt="Hall of Fame">
+            <div class="card-body">
+                <h1 class="card-title">Hall of Fame </h1>
+                <p class="card-sub-title">Hub for artists and creatives</p>
+                <p class="card-content"> Snösätra is a vibrant and culturally diverse neighborhood located in the
+                    Rågsved district of Stockholm, Sweden. It's emerging as a hub for artists and creatives, known for
+                    its colorful street art and avant-garde events. Snösätra is also home to the iconic Hall of Fame
+                    graffiti wall, a 300-meter long wall where artists from around the world come to showcase their
+                    unique styles and designs.</p>
+            </div>
+        </div>
+        <div class="card-container">
+            <img src="./img/locations/historiska.jpg" class="card-img" alt="Historiska">
+            <div class="card-body">
+                <h1 class="card-title">Historiska</h1>
+                <p class="card-sub-title">Spend a day to learn about Viking history</p>
+                <p class="card-content">Historiska is a museum dedicated to showcasing the country's history, culture,
+                    and traditions. Founded in the late 19th century, the museum boasts an impressive collection of
+                    artifacts spanning from prehistoric times to the present day. </p>
+            </div>
+        </div>
+        <div class="card-container">
+            <img src="./img/locations/opera house.jpg" class="card-img" alt="Opera House">
+            <div class="card-body">
+                <h1 class="card-title">Opera house </h1>
+                <p class="card-sub-title"> True cultural centerpiece</p>
+                <p class="card-content">The Royal Swedish Opera House is an ornate and prestigious theatrical venue
+                    located in Stockholm, Sweden. Built in the late 19th century, the Opera House features grand
+                    architecture, and a stunning interior that has attracted generations of opera lovers from around the
+                    world. </p>
+            </div>
+        </div>
+        <div class="card-container">
+            <img src="./img/locations/palace.jpg" class="card-img" alt="The Royal Palace">
+            <div class="card-body">
+                <h1 class="card-title">A Palace with 600 rooms </h1>
+                <p class="card-sub-title">The best park you can't miss in Stockholm</p>
+                <p class="card-content">The Royal Palace in Stockholm, Sweden, is one of the most iconic and grand
+                    landmarks in the city. It serves as the official residence of the Swedish royal family. With over
+                    600 rooms and a history dating back to the 1700s, the palace is a true masterpiece of architectural
+                    and cultural heritage. </p>
+            </div>
+        </div>
+        <div class="card-container">
+            <img src="./img/locations/vaxholm.jpg" class="card-img" alt="Vaxholm">
+            <div class="card-body">
+                <h1 class="card-title">Vaxholm </h1>
+                <p class="card-sub-title">A good day trip in the Archipelago </p>
+                <p class="card-content">Vaxholm is a picturesque island located in the Stockholm archipelago, Sweden.
+                    Known for its charming old town and historic fortress, Vaxholm offers a perfect blend of natural
+                    beauty and cultural heritage. The island is a popular summer destination, attracting visitors with
+                    its scenic beaches, boating opportunities, and vibrant marina. Strolling through its narrow streets,
+                    lined with colorful wooden houses, is a delightful experience.</p>
+            </div>
+        </div>
     </section>
-  </body>
+    <footer class="footer">
+        <p> 2023 Travel Compass Website. All rights reserved.</p>
+    </footer>
+</body>
+
 </html>
