--- a/code/index.html
+++ b/code/index.html
@@ -20,25 +20,28 @@
       <ul class="nav-links">
 
         <!-- USING CHECKBOX HACK (ikon og drop) -->
-        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
         <input type="checkbox" id="checkbox_toggle" />
+        <label for="checkbox_toggle" class="hamburger">&#9776;</label>
 
         <!-- NAVIGATION MENUS -->
         <div class="menu">
-          <li><a href="/"> Menu </a></li>
-          <li><a href="/"> About us </a></li>
-          <li><a href="/"> Newsletter </a></li>
+          <li><a href="/"> MENU </a></li>
+          <li><a href="/"> ABOUT US </a></li>
+          <li><a href="/"> NEWSLETTER </a></li>
+          <li><a href="/"> CONTACT</a></li>
         </div>
       </ul>
     </nav>
   </div>
 
 
+
   <!--fjernet over-->
   <div class="grid-parent">
 
     <div class="grid-item grid-one">
-      <h1>HEADER TEST OG BILDE</h1>
+      <h1>FALL INTO BEAUTY</h1>
+      <p>Embrace Autumn's Radiance</p>
     </div>
 
     <div class="grid-item sidebar">
@@ -80,12 +83,12 @@
 
 
   <footer>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--How to differentiate between navbar and footer? I want to center the footer, dont forget to add css for the footer after-->
     <ul>
-      <li><a href="#news">instagram</a></li>
-      <li><a href="#news">tiktok</a></li>
-      <li><a href="#news">facebook</a></li>
-      <li><a href="#news">contact</a></li>
+      <a href="#" class="fa fa-facebook"></a>
+      <a href="#" class="fa fa-instagram"></a>
+      <a href="#" class="fa fa-twitter"></a>
     </ul>
   </footer>
 
